[tool.poetry]
name = "certificate_playground"
version = "0.1.0"
description = ""
authors = ["ysku <yusuke1581@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cryptography = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
